# cpio-lite

./: CMakeLists.txt  README.md
include/: cpio-lite.h  cpio.h  customexceptions.h  descriptorwrapper.h  posixwrapper.h  util.h
samples/: CMakeLists.txt  archivefiles.cpp  directory.cpio  listfiles.cpp
samples/src/: archivate_files.cpp  get_files_list.cpp  unpack_file.cpp
samples/testfiles/cpio_archives/: links_dirs_regs.cpio  onetwothree.cpio
samples/testfiles/links_dirs_regs_1/: regular_file  symbolic_link_to_usual_directory
src/: cpio-lite.cpp  descriptorwrapper.cpp  posixwrapper.cpp  util.cpp
